# suzaku

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.yaml  main.cpp  pubspec.yaml  vcpkg.json
android/app/: build.gradle
base/: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
base/shared/: CMakeLists.txt
base/shared/common/: CMakeLists.txt  main.cc
base/shared/common/markdown/: markdown.cpp
base/shared/common/utils/: datetime.cpp  datetime.h  md5.cc  md5.h  query.cpp  uuid.cpp  uuid.h
base/shared/database/: quantum.def
base/shared/models/: ImageModel.h  LibraryModel.cpp  LibraryModel.h  PictureProvider.cpp  PictureProvider.h
base/shared/platform/wasm/: browser.cpp  wasm.cpp  wasm.h
base/shared/utils/: md5.cpp  md5.h  mime.cpp  mime.h
base/tests/: CMakeLists.txt  main.cpp
base/tests/utils/: md5.hpp
bundle/sql/: init.sql
lib/: config.dart  main.dart
lib/application/: application.dart  application_native.dart  application_web.dart  route.dart
lib/application/components/: arrow.dart  avatar.dart  empty.dart  filter_group.dart  image.dart  work_group.dart
lib/application/desktop/: application.dart  content.dart  home.dart  navbar.dart  route.dart  theme.dart
lib/application/desktop/components/: folders.dart  navbar.dart
lib/application/desktop/content/: list.dart  preview.dart
lib/application/desktop/pages/files/: directory2.dart  directory_view.dart  folders.dart  grid_view.dart  list_view.dart  page.dart  quickbar.dart  state.dart  state.g.dart
lib/application/desktop/pages/images/: album.dart  page.dart  pictures.dart
lib/application/desktop/pages/notes/: library.dart  list.dart  notes.dart  page.dart
lib/application/desktop/pages/password/: page.dart
lib/application/desktop/pages/uuid/: page.dart
lib/application/mobile/: application.dart  home.dart  route.dart
lib/application/pages/desktop/: album.dart  appbody.dart  directory2.dart  folders.dart  gallery.dart  home.dart  library.dart  route.dart
lib/application/pages/desktop/partials/: item.dart  list.dart
lib/application/pages/mobile/: home.dart
lib/application/pages/mobile/share/: receive.dart
lib/application/pages/partial/: filters.dart  folders.dart  toolbar.dart
lib/application/pages/web/: action.dart  export.dart  home.dart  source.dart  svgeditor.dart  svgviewer.dart
lib/application/pages/web/article/: header.dart  read.dart
lib/application/providers/: emotion.dart
lib/application/web/: application.dart  home.dart  route.dart
lib/application/web/pages/password/: page.dart
lib/application/web/pages/svg/: action.dart  export.dart  page.dart  source.dart  svgeditor.dart  svgviewer.dart
lib/models/: article.g.dart  authorization.dart  file.dart  file.g.dart  filter.g.dart  home.g.dart  picture.g.dart  resource.dart  resource.g.dart  tool.dart
lib/models/svg/: state.dart  state.g.dart
lib/services/: album.dart  articles.dart  database.dart  directory.dart  file.dart  folder.dart  home.dart  library.dart  location.dart  location.g.dart  picture.dart
lib/services/database/: database.dart  image.dart
lib/services/handlers/: image.dart
lib/services/image/: image.dart
lib/services/models/: image.dart  image.freezed.dart  image.g.dart
lib/services/notes/: note.dart  notebook.dart  notes.dart
lib/services/store/: hive.dart
lib/services/store/adapters/: task.dart
lib/services/tools/: tools.dart
lib/services/web/: articles.dart  tools.dart
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: DebugProfile.entitlements  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Base.lproj/: MainMenu.xib
native/: CMakeLists.txt
native/common/: common.def
native/common/markdown/: markdown.h
native/common/utils/: mime.cpp  mime.h  query.cpp  query.h  uuid.cpp
native/database/: README.md  main.cc  quantum.cc  quantum.h
qtoolkit/: .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
qtoolkit/content/: App.qml  FxScrollBar.qml  Main.qml  NavList.qml  Profiles.qml  TaskList.qml  Topbar.qml  Users.qml
qtoolkit/content/assets/macos/: Info.plist.in  icon.icns
qtoolkit/content/polaris/: Editor.qml  Navbar.qml  Page.qml  PartitionItem.qml  Sidebar.qml
qtoolkit/content/proxima/: App.qml  Cell.qml  Model.qml
qtoolkit/content/proxima/partial/: Sidebar.qml  Topbar.qml
qtoolkit/content/pulsar/: ChannelList.qml  Page.qml  SessionList.qml
qtoolkit/content/shaders/: rounded.frag
qtoolkit/content/sources/: LibraryViewModel.cpp  LibraryViewModel.h  PartitionViewModel.cpp  PartitionViewModel.h  PictureGridModel.cpp  PictureGridModel.h  PictureLocationViewModel.cpp  PictureLocationViewModel.h  SAChannelViewModel.cpp  SAChannelViewModel.h  SASessionListViewModel.cpp  SASessionListViewModel.h  markdown.cpp  markdown.h
qtoolkit/content/venus/: BrowserPage.qml  LibraryItem.qml  LibraryPage.qml  Location.qml  Navbar.qml  PictureGrid.qml
qtoolkit/models/: ImageModel.cpp  ImageModel.h  LibraryModel.h  PictureProvider.cpp  PictureProvider.h
qtoolkit/services/: FolderService.cpp  FolderService.h  ImageService.cpp  ImageService.h  LibraryService.cpp  LibraryService.h  MarkdownService.cpp  MarkdownService.h  SqliteService.cpp  SqliteService.h  SyncService.cpp  SyncService.h  UserService.cpp  UserService.h
qtoolkit/sqlite/: sqlite.cc  sqlite.h
qtoolkit/tests/: tests.cpp  tests.h
qtoolkit/threads/: SyncThread.cpp  SyncThread.h
qtoolkit/utils/: base32.cpp  base32.h  mime.cpp  mime.h
server/: .env.development  .gitignore  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
server/src/common/: config.ts
server/src/server/: config.ts  server.ts
server/src/types/: types.d.ts
test/: widget_test.dart
web/: index.html  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
web/src/: main.ts
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
(+8 files in other folders)
